--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10.3"
-dependencies = ["ollama>=0.4.4", "pydantic>=2.10.4"]
+dependencies = ["click>=8.1.8", "ollama>=0.4.4", "pydantic>=2.10.4"]
 
 [tool.setuptools.packages.find]
 where = ["src"]
@@ -13,4 +13,9 @@ where = ["src"]
 hoho-talk = { workspace = true }
 
 [dependency-groups]
-dev = ["black>=24.10.0", "hoho-talk", "isort>=5.13.2"]
+dev = [
+    "black>=24.10.0",
+    "hoho-talk",
+    "ipykernel>=6.29.5",
+    "isort>=5.13.2",
+]
